--- a/02312_CDIO2/.project
+++ b/02312_CDIO2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>19_del1</name>
+	<name>02312_CDIO2</name>
 	<comment></comment>
 	<projects>
 	</projects>
