--- a/02312_CDIO2/.settings/org.eclipse.core.resources.prefs
+++ b/02312_CDIO2/.settings/org.eclipse.core.resources.prefs
@@ -5,3 +5,4 @@ encoding//src/Control/Main.java=UTF-8
 encoding//src/Entity/Die.java=UTF-8
 encoding//src/Entity/DieCup.java=UTF-8
 encoding//src/Entity/Player.java=UTF-8
+encoding//src/TestTools/DieCupTestEntity.java=UTF-8
